V0.2:
    started work on the MarketFounder class and related functions.
    added compatibility with the new library for crew replacer.
    started work on the documentation (almost nothing done there is mush to do.)
    added the following classes:
        for compatibility patches:
           MarketRetrofits_PatchBase
           MarketRetrofits_InitCombatabilityPatches
           MarketRetrofits_CrewReplacer_patch
        for MarketFounder Libary:
            MarketRetrofits_MarketFounderMasterList
            MarketRetrofits_MarketFounder
            MarketRetrofits_SurveyPlugin_CrewReplacer
            MarketRetrofits_SurveyPlugin_Base
            MarketRetrofits_SurveyPlugin
V0.1.1:
    updated to game version 0.96a
V0.1 -
    save compatible with any older version
    new
        -recreated the supply demand library (now called Commodity Changer in notes and code).
        -see documentation at (add link here)
        (may contain bugs, but tests showed it was stable. should be no risk of breaking your game.)

    notes:
        i said i was going to release supply demand library a while ago, but the project went out of control. i though i could
        complete the basics of all the library's i wanted to make, but i could not. so this is late now, with little to show. oh well..