@@ -13,6 +13,11 @@ V0.2:
             MarketRetrofits_SurveyPlugin_CrewReplacer
             MarketRetrofits_SurveyPlugin_Base
             MarketRetrofits_SurveyPlugin
+
+            MarketRetrofits_customMarketFounder_dialog
+
+        for other:
+            MarketRetrofit_dialogShell
 V0.1.1:
     updated to game version 0.96a
 V0.1 -
